Closed Bug 241329 Opened 22 years ago Closed 22 years ago

Spidermonkey doesn't build with OpenWatcom

Categories

(Core :: JavaScript Engine, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Biesinger, Assigned: Biesinger)

Details

Attachments

(1 file)

ok, I tried to compile spidermonkey with openwatcom, using: make -f Makefile.ref result: jsapi.c(267): Error! E1071: Type of parameter 5 does not agree with previous def inition jsapi.c(267): Note! N2003: source conversion type is 'char **' jsapi.c(267): Note! N2004: target conversion type is 'char *(*)[1]' jsapi.c(370): Error! E1071: Type of parameter 5 does not agree with previous def inition jsapi.c(370): Note! N2003: source conversion type is 'char **' jsapi.c(370): Note! N2004: target conversion type is 'char *(*)[1]' make[1]: *** [WINNT5.1_DBG.OBJ/jsapi.obj] Error 255 (note: I am not sure this is the best way. however, the build instructions at http://lxr.mozilla.org/mozilla/source/js/src/README.html claim being out of date, and "nmake /f js.mak" fails with makefile errors) Spidermonkey compiles (doesn't link) with: make -f Makefile.ref XCFLAGS=-DHAVE_VA_LIST_AS_ARRAY should Makefile.ref define that somehow? or is it only supposed to work in combination w/ mozilla (configure seems to check for it)?
I think we want to change jscpucfg.c, see bug 59195
hmm, looking at jstypes.h, jsautocfg.h doesn't seem to be used (for normal config): #if (defined(XP_MAC) || defined(XP_WIN)) && !defined(CROSS_COMPILE) # include "jscpucfg.h" /* Use standard Mac or Windows configuration */ I'll change jscpucfg.h instead
Attached patch patchSplinter Review
Assignee: general → cbiesinger
Status: NEW → ASSIGNED
Attachment #146792 - Flags: review?(brendan)
Comment on attachment 146792 [details] [diff] [review] patch r=me, thanks. /be
Attachment #146792 - Flags: review?(brendan) → review+
(In reply to comment #0) > Spidermonkey compiles (doesn't link) with: it actually does link if I don't have a leftover LIB env var from MSVC. crashes when starting js.exe though... but that's a separate bug. checked in on trunk: Checking in jscpucfg.h; /cvsroot/mozilla/js/src/jscpucfg.h,v <-- jscpucfg.h new revision: 3.16; previous revision: 3.15 done
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Flags: testcase-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: