bug 241329, allow compiling spidermonkey with openwatcom r=brendan